<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.SettingsFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_holder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/invisible_color"
        app:layout_constraintBottom_toTopOf="@+id/receive_directory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/identifier_name"
            android:lines="1"
            android:singleLine="true"
            android:text="@string/default_id_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/receive_directory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:editable="false"
        android:ems="10"
        android:inputType="none"
        android:singleLine="false"
        android:text="@string/receive_location_placeholder"
        app:layout_constraintBottom_toTopOf="@+id/save_settings"
        app:layout_constraintEnd_toStartOf="@+id/select_directory"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_holder" />

    <Button
        android:id="@+id/select_directory"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:text="@string/select_receive_directory"
        app:layout_constraintBottom_toBottomOf="@+id/receive_directory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/receive_directory" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/receive_option_header"
        app:layout_constraintBottom_toTopOf="@+id/receive_directory"
        app:layout_constraintStart_toStartOf="@+id/receive_directory" />

    <Button
        android:id="@+id/save_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/save_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>