<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".activities.ConnectedActivity">

    <ImageView
        android:id="@+id/share_logo"
        android:layout_width="44sp"
        android:layout_height="44sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:tint="#0277BD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_share"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/connected_to_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/github_username"
        android:textColor="#039BE5"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/share_logo"
        app:layout_constraintStart_toEndOf="@+id/share_logo"
        app:layout_constraintTop_toTopOf="@+id/share_logo"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/transfer_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speed_text" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:clickable="true"
        app:backgroundTint="@color/add_button_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add"
        android:focusable="true" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:backgroundTint="@color/cancel_button_color"
        android:text="@string/cancel_text"
        app:layout_constraintBottom_toBottomOf="@+id/floatingActionButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/floatingActionButton" />

    <Button
        android:id="@+id/open_received_folder"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/show_received_files"
        app:layout_constraintBottom_toBottomOf="@+id/floatingActionButton"
        app:layout_constraintEnd_toStartOf="@+id/floatingActionButton"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@+id/cancel_button"
        app:layout_constraintTop_toTopOf="@+id/floatingActionButton" />

    <Button
        android:id="@+id/disconnect_button"
        android:layout_width="64dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/cancel_button_color"
        android:text="@string/end_connection"
        app:layout_constraintBottom_toBottomOf="@+id/connected_to_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/connected_to_username"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/transfers_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transfers_header"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/transfer_list"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/speed_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/speed_text"
        app:layout_constraintEnd_toStartOf="@+id/speed_text"
        app:layout_constraintTop_toTopOf="@+id/speed_text"
        app:srcCompat="@drawable/ic_up_down_arrow_64dp"
        android:contentDescription="@string/speed_icon_description" />

    <TextView
        android:id="@+id/speed_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/speed_placeholder"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/per_second"
        app:layout_constraintTop_toBottomOf="@+id/connected_to_username" />

    <TextView
        android:id="@+id/per_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/per_second"
        app:layout_constraintBaseline_toBaselineOf="@+id/speed_text"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>